--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -105,8 +105,19 @@
                                                 <action selector="setting:" destination="-1" eventType="touchUpInside" id="JCk-Im-ReS"/>
                                             </connections>
                                         </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wg1-tR-x2x">
+                                            <rect key="frame" x="314" y="7.6666666666666643" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="2gz-oR-gVo"/>
+                                                <constraint firstAttribute="height" constant="30" id="eIt-kC-yPn"/>
+                                            </constraints>
+                                            <state key="normal" image="ico_quesmark"/>
+                                            <connections>
+                                                <action selector="didTapAskBtn:" destination="-1" eventType="touchUpInside" id="dvo-hZ-W8t"/>
+                                            </connections>
+                                        </button>
                                         <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="H09-RP-Bv9">
-                                            <rect key="frame" x="225" y="9.6666666666666643" width="109" height="27"/>
+                                            <rect key="frame" x="200" y="9.6666666666666643" width="109" height="27"/>
                                             <color key="backgroundColor" red="0.1529411765" green="0.1529411765" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="26" id="ybT-3N-yPb"/>
@@ -127,12 +138,14 @@
                                         <constraint firstItem="ld2-C6-ZZl" firstAttribute="centerY" secondItem="WnY-VM-pN0" secondAttribute="centerY" id="1f0-VJ-QCJ"/>
                                         <constraint firstItem="Bbn-ee-Rg1" firstAttribute="leading" secondItem="L6F-j7-MKh" secondAttribute="trailing" constant="8" id="4mR-P0-bej"/>
                                         <constraint firstItem="L6F-j7-MKh" firstAttribute="top" secondItem="WnY-VM-pN0" secondAttribute="top" id="GJ1-gd-YoF"/>
+                                        <constraint firstItem="ld2-C6-ZZl" firstAttribute="leading" secondItem="wg1-tR-x2x" secondAttribute="trailing" constant="5" id="KgK-tZ-2LD"/>
                                         <constraint firstAttribute="bottom" secondItem="tmG-wz-MyA" secondAttribute="bottom" id="OAY-Pe-MiN"/>
                                         <constraint firstItem="tmG-wz-MyA" firstAttribute="top" secondItem="Bbn-ee-Rg1" secondAttribute="bottom" id="Xjg-hI-oIv"/>
                                         <constraint firstItem="Bbn-ee-Rg1" firstAttribute="top" secondItem="WnY-VM-pN0" secondAttribute="top" id="aJz-ld-l9U"/>
-                                        <constraint firstItem="ld2-C6-ZZl" firstAttribute="leading" secondItem="H09-RP-Bv9" secondAttribute="trailing" constant="15" id="aMs-SZ-S2Y"/>
                                         <constraint firstAttribute="bottom" secondItem="L6F-j7-MKh" secondAttribute="bottom" id="ap4-xC-sB8"/>
                                         <constraint firstAttribute="trailing" secondItem="ld2-C6-ZZl" secondAttribute="trailing" constant="5" id="csk-RB-UcI"/>
+                                        <constraint firstItem="wg1-tR-x2x" firstAttribute="centerY" secondItem="ld2-C6-ZZl" secondAttribute="centerY" id="j3Z-pN-eRP"/>
+                                        <constraint firstItem="wg1-tR-x2x" firstAttribute="leading" secondItem="H09-RP-Bv9" secondAttribute="trailing" constant="5" id="qDc-CI-8yE"/>
                                         <constraint firstItem="tmG-wz-MyA" firstAttribute="leading" secondItem="Bbn-ee-Rg1" secondAttribute="leading" id="suv-GP-qYM"/>
                                         <constraint firstItem="L6F-j7-MKh" firstAttribute="leading" secondItem="WnY-VM-pN0" secondAttribute="leading" constant="5" id="t61-5P-bVq"/>
                                         <constraint firstItem="H09-RP-Bv9" firstAttribute="centerY" secondItem="ld2-C6-ZZl" secondAttribute="centerY" id="uoe-1T-emI"/>
@@ -700,6 +713,7 @@
         <image name="2" width="114" height="106"/>
         <image name="aq" width="24" height="24"/>
         <image name="cz_mine" width="30" height="30"/>
+        <image name="ico_quesmark" width="14" height="16"/>
         <image name="icon" width="42" height="42"/>
         <image name="jl" width="24" height="24"/>
         <image name="l_btn_line" width="315" height="48"/>
