--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNRecordDetailVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNRecordDetailVC.xib
@@ -449,7 +449,7 @@
                     </constraints>
                 </view>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mk0-tb-XfB" customClass="CNTwoStatusBtn">
-                    <rect key="frame" x="15" y="726" width="384" height="48"/>
+                    <rect key="frame" x="15" y="774" width="384" height="48"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="48" id="2yc-sG-Mc0"/>
                     </constraints>
@@ -459,9 +459,9 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tgu-HB-j9F" customClass="BYBorderButton">
-                    <rect key="frame" x="15" y="789" width="384" height="48"/>
+                    <rect key="frame" x="15" y="837" width="384" height="0.0"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="48" id="uTM-U5-bcg"/>
+                        <constraint firstAttribute="height" id="uTM-U5-bcg"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="16"/>
                     <state key="normal" title="取消订单">
